# py-mmcif

./: .coveragerc  .gitignore  .gitmodules  .isort.cfg  404.html  BUILD.sh  CMakeLists.txt  HISTORY.txt  MANIFEST.in  README.md  azure-pipelines.yml  azure-template-publish-job.yml  azure-template-tox-job.yml  cibuildwheel.toml  index.html  mkdocs.yml  objects.inv  pylintrc  requirements-doc.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini  tox.ini-ORIG
api_reference/: index.html
api_reference/BinaryCifReader/: index.html
api_reference/BinaryCifWriter/: index.html
api_reference/CifFile/: index.html
api_reference/DataCategory/: index.html
api_reference/DataCategoryBase/: index.html
api_reference/DataCategoryFormatted/: index.html
api_reference/DataCategoryTyped/: index.html
api_reference/DictMethodRunner/: index.html
api_reference/DictionaryApi/: index.html
api_reference/DictionaryInclude/: index.html
api_reference/IoAdapterBase/: index.html
api_reference/IoAdapterCore/: index.html
api_reference/IoAdapterPy/: index.html
api_reference/Method/: index.html
api_reference/MethodUtils/: index.html
api_reference/PdbxContainers/: index.html
api_reference/PdbxExceptions/: index.html
api_reference/PdbxReader/: index.html
api_reference/PdbxWriter/: index.html
docs-mkdocs/: gen-api.py
docs-mkdocs/api_reference/: BinaryCifReader.md  BinaryCifWriter.md  CifFile.md  DataCategory.md  DataCategoryBase.md  DataCategoryFormatted.md  DataCategoryTyped.md  DictMethodRunner.md  DictionaryApi.md  DictionaryInclude.md  IoAdapterBase.md  IoAdapterCore.md  IoAdapterPy.md  Method.md  MethodUtils.md  PdbxContainers.md  PdbxExceptions.md  PdbxReader.md  PdbxWriter.md
mmcif/: __init__.py
mmcif/api/: DataCategory.py  DataCategoryBase.py  DataCategoryFormatted.py  DataCategoryTyped.py  DictMethodRunner.py  DictionaryApi.py  DictionaryInclude.py  Method.py  MethodUtils.py  PdbxBuild.py  PdbxContainers.py  __init__.py
mmcif/io/: BinaryCifReader.py  BinaryCifWriter.py  BinaryCifWriter.py-save  BinaryCifWriter.py-working  BuildDictionaryExec.py  CifFile.py  IoAdapterBase.py  IoAdapterCore.py  IoAdapterPy.py  PdbxExceptions.py  PdbxReader.py  PdbxWriter.py  __init__.py
mmcif/tests/: DataCategoryTests.py  Dictionary2DDLmTests.py  DictionaryApiTests.py  DictionaryMarkdownTests.py  DictionaryReadWriteTests.py  IoAdapterCoreTests.py  IoAdapterPyTests.py  MethodUtilsTests.py  PdbxReadWriteTests.py  PdbxReaderTests.py  PdbxWriterTests.py  StarReaderTests.py  bcifprint.py  testBinaryCifReader.py  testBinaryCifWriter.py  testCifFileApi.py  testCifQuoting.py  testCifTab.py  testDataCategory.py  testDictionary2DDLm.py  testDictionaryApi.py  testDictionaryInclude.py  testDictionaryMarkdown.py  testDictionaryReadWrite.py  testGroupsDictiionaryApi.py  testIoAdapterCore.py  testIoAdapterPy.py  testMethodUtils.py  testPdbxContainers.py  testPdbxReadWrite.py  testPdbxReader.py  testPdbxWriter.py  testStarReader.py
mmcif/tests/data/: 1bna-errors.cif  1bna.cif  PDBDEV_00000041.bcif  mmcif_ddl-generator.dic  mmcif_ddl-master.dic  mmcif_ddl.dic  mmcif_ddl_generated.dic  mmcif_pdbx_v40.dic  mmcif_pdbx_w_methods.dic  pdbx-dictionary-extensions-examples.dic  test_ext-generator.dic
modules/cpp-core-mmciflib-wrapper-gen/: RUN_BINDER.sh  Run.sh  core_mmciflib_binder_Darwin.config  exclude-include-pybind.list  mmciflib.cfg  reformat-includes.py
modules/cpp-core-mmciflib-wrapper-gen-binder/: core_mmciflib_binder_Darwin.config  core_mmciflib_binder_Linux.config  current-pybind-include-list.h
modules/cpp-core-mmciflib-wrapper-gen-binder/include-binder/: BlockIO.h  CifDataInfo.h  CifDefs.h  CifParentChild.h  CifParserBase.h  DICScannerBase.h  DictObjCont.h  DictObjContInfo.h  Exceptions.h  ITTable.h  ParentChild.h  RcsbFile.h  RcsbPlatform.h  TTable.h  TableFile.h  mapped_ptr_vector.h  mapped_vector.h
modules/cpp-core-mmciflib-wrapper-gen-binder/src-Darwin/: CifFileReadDef.cpp  CifFileUtil.cpp  DataInfo.cpp  GenString.cpp  ITTable.cpp  mmciflib.sources  rcsb_types.cpp
modules/cpp-core-mmciflib-wrapper-gen/include-binder/: CifCorrector.h  CifExcept.h  CifFile.h  CifFileReadDef.h  CifFileUtil.h  CifScannerBase.h  CifString.h  DICParserBase.h  DataInfo.h  DicFile.h  DictDataInfo.h  DictObjFile.h  DictParentChild.h  GenCont.h  GenString.h  ISTable.h  Serializer.h  TableError.h  mapped_ptr_vector.C  mapped_vector.C  rcsb_math.h  rcsb_types.h
modules/cpp-core-mmciflib-wrapper-gen/src/: wrapCifDataInfo.cpp  wrapCifFile.cpp  wrapCifFileReadDef.cpp  wrapCifFileUtil.cpp  wrapDicFile.cpp  wrapDictDataInfo.cpp  wrapISTable.cpp  wrapTableFile.cpp  wrapmmciflib.cpp  wraprcsb_types.cpp
modules/cpp-core-mmciflib-wrapper-gen/src-Darwin/: CifFileReadDef.cpp  CifFileUtil.cpp  CifString.cpp  DataInfo.cpp  DicFile.cpp  GenCont.cpp  GenString.cpp  GenString_1.cpp  ISTable.cpp  ITTable.cpp  TableFile.cpp  mmciflib.cpp  mmciflib.sources  rcsb_types.cpp
modules/cpp-mmciflib-test/src/: BigCifTest.C  CifDiff.C  CifInfo.C  CifReader.C  DataChecking.C  DictInfo.C  FOtest1.C  FOtest10.C  FOtest11.C  (+15 more)
pdbx_mmcif_utils/api/: DataCategory.py  DataCategoryBase.py  DataCategoryFormatted.py  DictionaryApi.py  Method.py  MethodUtils.py  PdbxBuild.py  PdbxContainers.py
pdbx_mmcif_utils/tests/: DataCategoryTests.py  DictionaryApiTests.py  IoAdapterPyTests.py  MethodUtilsTests.py  PdbxBuildExamples.py  PdbxBuildTests.py  PdbxDictAccessTests.py  PdbxReadWriteTests.py  PdbxReaderTests.py  PdbxWriterTests.py  StarReaderTests.py  TableTest.py  unicode-test.py
scripts/: initdocs.sh
scripts/docs-resources/: conf-extra.py  conf.py  index.rst  layout.html  markdown.md
search/: search_index.json
tests/: DataCategoryTests.py  DictionaryApiTests.py  IoAdapterCoreTests.py  IoAdapterPyTests.py  MethodUtilsTests.py  PdbxReadWriteTests.py  PdbxReaderTests.py  PdbxWriterTests.py  StarReaderTests.py
tests/data/: chemical_shifts_example.str  example-dependent-conditions.cif  mmcif_pdbx_w_methods.dic  specialTestFile.cif  testFileWithStopTokens.cif  testSingleRow.cif  unicode-char-ref-test.cif  unicode-test.cif
(+40 files in other folders)
